[package]
name = "tpctools"
version = "0.6.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Utilities for generating and converting TPC-H and TPC-DS data sets"
homepage = "https://github.com/andygrove/tpctools/"
repository = "https://github.com/andygrove/tpctools/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3", default-features = false }
async-trait = "0.1.50"
datafusion = "52.1.0"
futures = "0.3.24"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"